--- a/app/components/resume/role.hbs
+++ b/app/components/resume/role.hbs
@@ -8,11 +8,12 @@
 					<div class="role-company-container">
 						<dt class="visuallyhidden">Company</dt>
 						<dd class="role-company">
-							<a href={{@role.company.link}} target="_blank" rel="noopener noreferrer">
+							<a href={{@role.company.link}} class="role-company-link" target="_blank" rel="noopener noreferrer">
 								<figure class="role-company-image-container">
 									<ResponsiveImage @src={{@role.company.imageURL}} class="role-company-image {{if @role.company.logoIsInverted "inverted"}}" alt={{@role.company.name}}/>
 									<figcaption class="role-company-name {{if @role.company.isTextLogo "visuallyhidden"}}">{{@role.company.name}}</figcaption>
 								</figure>
+								<IconifyIcon @icon="gridicons:external"/>
 							</a>
 						</dd>
 					</div>
