--- a/app/components/social-links.hbs
+++ b/app/components/social-links.hbs
@@ -23,7 +23,7 @@
 	{{/unless}}
 	<li class="social-link">
 		<a href="https://github.com/srsgores" target="_blank" rel="noopener noreferrer">
-			<IconifyIcon @icon="logos:github-icon"/>
+			<IconifyIcon @icon="mdi:github"/>
 		</a>
 	</li>
 	<li class="social-link">
