feat(resume): print styles

--- a/app/components/resume/resume.hbs
+++ b/app/components/resume/resume.hbs
@@ -55,7 +55,7 @@
 					<li class="engagement">
 						<dl class="contribution-meta">
 							<dt class="visuallyhidden">Role</dt>
-							<dd>{{engagement.role}}</dd>
+							<dd class="engagement-title">{{engagement.role}}</dd>
 							{{#if engagement.activity}}
 								<dt class="visuallyhidden">Activity</dt>
 								<dd><a href={{engagement.activity.host.link}} target="_blank" rel="noreferrer noopener">{{engagement.activity.name}} <IconifyIcon @icon="gridicons:external"/></a></dd>
