fix(accessibility): social link contrast via changing icons

--- a/app/components/social-links.hbs
+++ b/app/components/social-links.hbs
@@ -17,7 +17,7 @@
 		</li>
 		<li class="social-link">
 			<a href="https://instagram.com/goreseanathon" target="_blank" rel="noopener noreferrer">
-				<IconifyIcon @icon="logos:instagram-icon"/>
+				<IconifyIcon @icon="skill-icons:instagram"/>
 			</a>
 		</li>
 	{{/unless}}
@@ -33,7 +33,7 @@
 	</li>
 	<li class="social-link">
 		<a href="https://codepen.io/srsgores" target="_blank" rel="noopener noreferrer">
-			<IconifyIcon @icon="logos:codepen-icon"/>
+			<IconifyIcon @icon="ri:codepen-fill"/>
 		</a>
 	</li>
 	<li class="social-link">
