--- a/app/styles/components/page-section.css
+++ b/app/styles/components/page-section.css
@@ -24,7 +24,7 @@
 }
 
 .page-section.full {
-	padding: 0 1em;
+	padding: 0 clamp(2em, 3em, calc(1vw + 2em));
 }
 
 .page-section > *:not(.page-section-title) + * {
@@ -36,13 +36,6 @@
 	padding: 0 1em;
 }
 
-.page-section ul:not(.gallery-photos), .page-section ol {
-	list-style: initial;
-	padding: 0 2.5em 1em 2.5em;
-	display: flex;
-	flex-direction: column;
-	gap: 0.5em;
-}
 
 .page-section em {
 	font-style: italic;
