refactor: type to own css file fix: bullet lists not indented

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -24,7 +24,7 @@
 	</Grid>
 </PageSection>
 
-<PageSection id="specialties" as |section|>
+<PageSection class="prose" id="specialties" as |section|>
 	<section.title>Specialties</section.title>
 	<p>Creating rich <em>Javascript</em> applications has been a passion of mine since the early 2000s. From <a href="https://ca.linkedin.com/pub/sean-goresht/3b/22a/878" target="_blank" rel="noopener noreferrer">teaching at various institutions</a>, I have a strong understanding of the way <abbr title="Single Page Applications">SPA</abbr> frameworks work:</p>
 	<ul class="specialties">
@@ -49,7 +49,7 @@
 	</a></p>
 </PageSection>
 
-<PageSection id="other-specialties" as |section|>
+<PageSection class="prose" id="other-specialties" as |section|>
 	<section.title>Other Specialties</section.title>
 	<ul class="sub-specialties">
 		<li class="sub-specialty">HTML</li>
@@ -66,7 +66,7 @@
 	</aside>
 </PageSection>
 
-<PageSection id="other-resumes" as |pageSection|>
+<PageSection class="prose" id="other-resumes" as |pageSection|>
 	<pageSection.title>My Other Resumes</pageSection.title>
 	<PageSection id="travel" as |nestedSection|>
 		<nestedSection.title>Travel</nestedSection.title>
