fix(resume): education institution does not open link in new tab

--- a/app/components/resume/resume.hbs
+++ b/app/components/resume/resume.hbs
@@ -83,7 +83,7 @@
 			<h2 class="resume-details-section-title">Education</h2>
 			<dl class="education-meta">
 				<dt class="visuallyhidden">Institution</dt>
-				<dd class="institution-name"><a href="https://www.ucalgary.ca/">University of Calgary <IconifyIcon @icon="gridicons:external"/></a></dd>
+				<dd class="institution-name"><a href="https://www.ucalgary.ca/" target="_blank" rel="noopener noreferrer">University of Calgary <IconifyIcon @icon="gridicons:external"/></a></dd>
 				<dt class="visuallyhidden">Degree</dt>
 				<dd>
 					<dl class="degree-meta">
