fix: citizenship not showing up

--- a/app/components/resume/resume.hbs
+++ b/app/components/resume/resume.hbs
@@ -9,7 +9,7 @@
 							<dt class="visuallyhidden">Citizenship</dt>
 							<dd>
 								<ul class="candidate-nationalities">
-									{{#each this.citizenship as |nationality|}}
+									{{#each this.data.citizenship as |nationality|}}
 										<li class="nationality" title="Eligible to work in {{nationality.country}}">
 											<span class="visuallyhidden"{{nationality.country}}></span>
 											<span class="country">{{nationality.icon}}</span>
