--- a/app/components/resume/role.hbs
+++ b/app/components/resume/role.hbs
@@ -35,7 +35,7 @@
 					</time>
 				</dd>
 				<dt class="visuallyhidden">Duration</dt>
-				<dd class="role-duration">{{get-duration @role.startDate @role.endDate}}</dd>
+				<dd class="role-duration">{{get-duration @role.startDate @role.endDate format="short"}}</dd>
 			</div>
 		</div>
 		<div class="role-secondary-container">
