--- a/app/styles/components/resume.css
+++ b/app/styles/components/resume.css
@@ -107,6 +107,47 @@
 	}
 }
 
+.role-container {
+	padding: 1.5rem;
+	border: 0.1rem solid #55555552;
+	border-radius: 0.5rem;
+	position: relative;
+	z-index: 1;
+	background-color: #2b2b2b;
+	--timeline-dot-size: 0.625rem;
+	--timeline-line-width: 0.125rem;
+}
+
+.role-container + .role-container {
+	margin-block-start: 1.5rem;
+}
+
+.role-container::before {
+	content: "";
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	width: var(--timeline-dot-size);
+	height: var(--timeline-dot-size);
+	background-color: rgba(0, 0, 0, 0.46);
+	border-radius: 50%;
+	transform: translateX(-50%);
+}
+
+.role-container::after {
+	content: "";
+	position: absolute;
+	inset: 100% 50% auto;
+	width: var(--timeline-line-width);
+	height: 50%;
+	background: rgba(0, 0, 0, 0.28);
+	transform: translateX(-50%);
+}
+
+.role-container:last-child::after, .role-container:last-child::before {
+	display: none;
+}
+
 .role-achievements {
 	display: flex;
 	flex-direction: column;
